# ifThen

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  local_llm_config.example.py  package-lock.json  pyproject.toml  requirement-new.md
.claude/: settings.local.json
.trace/: 04.15-1.md  04.15.md  SUMMARY.md
.trellis/: .template-hashes.json
PRDS/: PRD001-合成拟真语料.md
desktop/: README.md  electron-builder.json  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.test.json
docs/: 2026-04-06-agent-handoff.md  2026-04-08-milestone-progress-summary.md  analysis-performance-5000-20260426.md  analysis-performance-5000-20260501.md  desktop-frontui-migration-status.md  project-status.md  后端接口与前端使用盘点.md
plan/: PARALLEL-GUIDE.md  README.md  SUMMARY.md  TASK-NUMBERING.md  TODO.md  backlog.md  completed.md  current-tasks.md  realism-00-roadmap.md  realism-01-baseline-and-evaluation.md  realism-01-pre-synthetic-corpus.md  realism-02-layered-evidence-context.md  realism-03-retrieval-ranking-budget.md  realism-04-persona-style-enrichment.md  realism-05-prompt-guardrails.md  realism-06-realtime-branch-backend.md  realism-07-realtime-branch-frontend.md  realism-08-quality-and-rollout.md
scripts/: build_desktop_backend.py  clean_failed_conversations.py  generate_realism_synthetic_corpus.py  package_windows_release.py  run_api.py  run_worker.py  sim_cli.py
tests/: test_analysis.py  test_conversation_management.py  test_health.py  test_imports.py  test_llm.py  test_models.py  test_packaging.py  test_parser.py  test_queries.py  test_retrieval.py  (+6 more)
(+165 files in other folders)
