[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "if-then-mvp"
version = "0.0.0"
description = "Counterfactual conversation MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
